--- a/index.css
+++ b/index.css
@@ -135,7 +135,7 @@
 .loadingCircle {
    width: 24px;
    height: 24px;
-   border: 4px solid blue;
+   border: 4px solid var(--main-color);
    border-right-color: transparent;
    border-radius: 50%;
    animation: spinner 0.8s infinite linear forwards;
